--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "sanchit-portfolio",
   "private": true,
   "version": "0.0.1",
+  "homepage": "https://sanchit2405.github.io/My-Portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,7 +19,9 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^5.4.21"
